# rain.drops

./: .env.example  .gitignore  Cargo.toml  README.md  flake.nix  rustfmt.toml
.github/workflows/: check.yaml  ci.yaml  collect.yaml  manual.yaml
src/: compose.rs  env.rs  lib.rs  logs.rs  main.rs  onchain.rs
src/onchain/: mock.rs  mod.rs  real.rs
