[package]
name = "flowatchdog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "0.6.4", features = ["full"] }
clap = { version = "4.5.18", features = ["derive", "env"] }
dotenv = "0.15.0"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.97"
backon = "1.4.0"
